@@ -1,3 +1,8 @@
+2004-02-05  Stefan Petersen  <spe@stacken.kth.se>
+
+	* src/gerbv.c: Dan strikes again. Option -p (with appropriate 
+	  error message) added as an alternative to --project.
+
 2004-02-01  Stefan Petersen  <spe@stacken.kth.se>
 
 	* src/gerbv.c: Patch from Dan causes the "save as..." dialog box 
